fixed GET /{session}/groups to actually list the groups
